syntax = "proto3";

package avikom.assistance;

option csharp_namespace = "Avikom.Types.Assistance";
option go_package = "gitlab.ub.uni-bielefeld.de/avikom/go-types/avikom/assistance";
option java_package = "app.avikom.types.assistance";

/**
 * This message represents a choice a user can select. It is commonly part of a selection of choices 
 * in a ChoiceConfig.
 * @author: Alexander Neumann <alneuman@techfak.uni-bielefeld.de>
 */
message ChoiceItem {
    string value = 1;   /// The value a peer should return when a user made a choice.
    string label = 2;   /// If set, present this (human readable) label instead of the actual choice value to the user.
    bool selected = 3;  /// Represents the current selection state of the item.
    bool disabled = 4;  /// Whether this item can currently be selected or not. Note that `true` also means an item cannot be deselected.
}
